Swagger issue resolved
